--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <p>aswd</p>
-  <h1>asd</h1>
-  <h2>zxc</h2>
+  <div>test</div>
+  <script>
+
+  </script>
 </body>
 </html>
